--- a/src/sass/components/_music_player.scss
+++ b/src/sass/components/_music_player.scss
@@ -43,7 +43,7 @@
 	max-height: calc(#{$panelSize} / 2 + 4px);
 	overflow: hidden;
 	.panel {
-		height: calc(50% - 2px);
+		height: calc(50% - 2px)!important;
 		margin: 0;
 		padding: 0;
 		position: relative;
